--- a/Dziennik_Online_Backend/Dziennik_Online_Backend/Dziennik_Online_Backend.csproj
+++ b/Dziennik_Online_Backend/Dziennik_Online_Backend/Dziennik_Online_Backend.csproj
@@ -22,6 +22,16 @@
 
   <ItemGroup>
     <Folder Include="DbModels\" />
+    <Folder Include="Models\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Services\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Models\" />
+    <None Remove="Repositories\" />
+    <None Remove="Services\" />
+    <None Remove="Converters\" />
+  </ItemGroup>
 </Project>
