--- a/dziennik_online_frontend/package.json
+++ b/dziennik_online_frontend/package.json
@@ -3,16 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.3",
-    "bootstrap": "^5.1.3",
-    "react-bootstrap": "^2.3.0",
-    "bootstrap-icons": "^1.8.1",
-    "react-router-dom": "^6.3.0",
-    "web-vitals": "^2.1.4",
-
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -20,7 +10,17 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.6",
     "@types/react-bootstrap": "^0.32.29",
-    "@types/react-dom": "^18.0.2"
+    "@types/react-dom": "^18.0.2",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.3.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.6.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
